<resources>
    <string name="app_name">Bezat</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password*</string>
    <string name="password_label">Password</string>
    <string name="user_name">Email/Phone Number</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="my_scan_history">My Scan History</string>
    <string name="about_bezat">About Bezat</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="faq">FAQ</string>
    <string name="change_password">Change Password*</string>
    <string name="change_password_label">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="change_language_cap">CHANGE LANGUAGE</string>
    <string name="logout">Logout</string>
    <string name="push_notification">Push Notification</string>
    <string name="name">NAME:</string>
    <string name="email">EMAIL</string>
    <string name="email_signup">Email*</string>
    <string name="country">Please select country</string>
    <string name="select_country">Please select country</string>
    <string name="country_label">Country*</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="gender_signup">Gender*</string>
    <string name="dob">Date Of Birth*</string>
    <string name="fav_offers">Favourite Offers</string>
    <string name="prizes">Prizes</string>
    <string name="total_coupon">Total Coupons</string>
    <string name="partners">Merchants</string>
    <string name="winners">Winners</string>
    <string name="sign_out">Sign Out</string>
    <string name="vip_offers">VIP Offers</string>
    <string name="my_profile">My Profile</string>
    <string name="save">SAVE</string>
    <string name="skip">SKIP</string>
    <string name="done">Done</string>
    <string name="someting_wrong">Something, went wrong!</string>
    <string name="ok">OK</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="enter_password">Enter Password*</string>
    <string name="phone">Phone</string>
    <string name="valid_email">Please enter valid email</string>
    <string name="empty_email">Please enter Email</string>
    <string name="empty_name">Please enter Name</string>
    <string name="empty_password">Please enter Password*</string>
    <string name="empty_confirm_password">Please enter Confirm password</string>
    <string name="password_mismatch">Password and Confirm Password does not match</string>
    <string name="empty_dob">Please enter Date of Birth</string>
    <string name="empty_phone">Please enter Phone Number</string>
    <string name="invalid_phone">Please enter valid Phone Number</string>
    <string name="empty_gender">Please enter Gender</string>
    <string name="empty_country">Please enter country</string>
    <string name="loading">loading...</string>
    <string name="reg_success">Registration Successful</string>
    <string name="title_activity_main_home_activty">MainHomeActivty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_coupon">Get Coupon</string>
    <string name="partner_name">Partner Name :</string>
    <string name="winner_name">Winner Name :</string>
    <string name="prize">Prize :</string>
    <string name="date">Date :</string>
    <string name="favourite_offer">Favourite Offer</string>
    <string name="bezat_winner">Bezat Winner</string>
    <string name="phone_number">Phone Number*</string>
    <string name="code">Code</string>
    <string name="code_signup">Code*</string>
    <string name="send">SEND</string>
    <string name="please_enter_your_register_phone_number_below_we_will_send_a_code_to_reset_your_password">Please Enter
        your register Phone Number below. We will send a code to reset your password
    </string>
    <string name="my_favourite">My Favourite</string>
    <string name="google">GOOGLE</string>
    <string name="facebook">FACEBOOK</string>
    <string name="instagram">INSTAGRAM</string>
    <string name="twitter">TWITTER</string>
    <string name="bezat_raffle_is_a_product_of_bezat_and_conducts_monthly_raffles_apple_is_not_involved_in_anyway_with_the_sweepstake_and_not_a_sponsor_of_this_application">
    BEZAT raffle is a product of BEZAT and conducts monthly raffles. Apple is not involved in anyway with the sweepstake and not a sponsor of this application
    </string>
    <string name="customer_qr_code">Customer QR Code</string>
    <string name="customer_id">Customer ID</string>
    <string name="bill_no">Bill No</string>
    <string name="billNo">Bill No</string>
    <string name="store">Store</string>
    <string name="offers">Offers</string>
    <string name="logout_confirm">Are you sure, you want to SignOut?</string>
    <string name="select_language">Select Language</string>
    <string name="please_enter_the_otp_we_have_sent_to_your_registered_phone_number">Please enter the OTP we have sent to your registered Phone Number</string>
    <string name="otp">OTP</string>
    <string name="resend">RESEND</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP ?</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="country_logo">Country Logo</string>
    <string name="get_feedback">Feedback</string>
    <string name="send_contact_us">SEND</string>
    <string name="get_name">NAME:</string>
    <string name="get_name_signup">Name*</string>
    <string name="get_email">EMAIL:</string>
    <string name="get_comments">COMMENTS:</string>
    <string name="user_name_Login">Email / Phone Number</string>
    <string name="skip_login">SKIP</string>
    <string name="you_will_take_to_login_screen">You will be taken to the login screen, okay?</string>
    <string name="search_by_retailer_name"><font size="15">Search by Retailer</font></string>
    <string name="searchbyretailername"><font size="15">SEARCH BY RETAILER NAME</font></string>
    <string name="choose_retailer_here"><font size="18">Choose retailer here</font></string>
    <string name="note_your_feedback_will_be_sent_to_the_retailer">Note: Your feedback will be sent to the retailer</string>
    <string name="rate_your_star">Rate your star</string>
    <string name="search_retailer">Search Retailer</string>
    <string name="bezat_yearly">Bezat Yearly</string>
    <string name="bezat_monthly">Bezat Monthly</string>
    <string name="other_raffles">Other Raffles</string>
    <string name="search_by_retailer">Search by Retailer</string>
    <string name="enter_mobile_no">Enter Mobile No*</string>
    <string name="view_all_offers">View All Offers</string>
    <string name="SEND">SEND</string>
    <string name="submit_feedback_buton">SUBMIT</string>
    <string name="write_your_feedback_section">Write your feedback</string>
    <string name="prize_prizes_section">Prize :</string>
    <string name="prize_details_prizes_section">Prize Detail</string>
    <string name="raffle_draw_announce_tomorrow">RAFFLE DRAW ANNOUNCE TOMORROW</string>
    <string name="raffle_draw_announce_today">RAFFLE DRAW ANNOUNCE TODAY</string>
    <string name="raffle_held">RAFFLE HELD</string>
    <string name="days_before">DAYS BEFORE</string>
    <string name="raffle_draw_in">RAFFLE DRAW IN</string>
    <string name="days_prizes">DAYS</string>
    <string name="your_feedback_has_been_sent_successfully">Your feedback has been sent successfully</string>
    <string name="please_select_retailer">Please select a retailer!</string>
    <string name="sign_in_to_access_this_action">Sign in to access this section</string>
    <string name="no_coupons_at_this_moment">No Coupons at this moment</string>
    <string name="offer_price_user">Offer Price:</string>
    <string name="orginal_price_user">Original Price:</string>
    <string name="code_offer">Code:</string>
    <string name="redeem_in_offer">REDEEM</string>
    <string name="offer_detail_inuser">Offer Detail</string>
    <string name="no_winners_available">Winners not found</string>
    <string name="no_coupons_available">No Coupons Available</string>
    <string name="no_offer_found">No Offer found</string>
    <string name="enterFeedback">Type your feedback</string>
    <string name="login1">Login</string>

    <string-array name="array_languages">
        <item></item>
        <item>English</item>
        <item>عربى</item>
    </string-array>

    <string name="arabic">عربى</string>

    <string name="noCoupons">No. of Coupons</string>
    <string name="coupons">Coupons</string>
    <string name="login">Sign In</string>
    <string name="strings" translatable="false">\@string/done</string>
    <string name="please_enter_code">Please enter Code</string>
    <string name="please_enter_phone_number">Please enter Phone Number</string>
    <string name="please_enter_password">Please Enter Password*</string>
    <string name="please_enter_confirm_password">Please enter Confirm Password</string>
    <string name="passwords_dont_match">Password and Confirm Password does not match</string>
    <string name="enterUserName">Email / Phone Number</string>
    <string name="enterPassword">Password</string>
    <string name="please_enter_feedback">Please enter feedback!</string>
    <string name="please_rate_your_star">Rate your star</string>

    <string name="login_login">Login</string>


</resources>
