<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/tool"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_28sdp"
                android:src="@mipmap/ic_back"
                android:visibility="invisible" />

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/default_size"
                android:textColor="@color/white"
                android:fontFamily="@font/tajawal_bold"
                android:text="@string/sign_up" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_28sdp"
                android:visibility="invisible"
                android:src="@mipmap/ic_back" />

        </LinearLayout>
    </Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:layout_weight="0.4">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/countryNameContainer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/code_signup"
                        android:textColorHint="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/country"
                            style="@style/field"
                            android:focusableInTouchMode="true"
                            android:focusable="false"
                            android:layout_marginEnd="2dp"
                            android:textColor="@android:color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/countryIcon"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintTop_toTopOf="@id/countryNameContainer"
                        app:layout_constraintBottom_toBottomOf="@id/countryNameContainer"
                        app:layout_constraintEnd_toEndOf="@id/countryNameContainer" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.6"
                    android:textColorHint="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        style="@style/field"
                        android:layout_marginStart="2dp"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:textColor="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/field"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    style="@style/field"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:visibility="invisible"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    style="@style/field"
                    android:hint="@string/get_name_signup"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gender_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:visibility="invisible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etGender"
                    style="@style/field"
                    android:hint="@string/gender_signup"
                    android:focusableInTouchMode="true"
                    android:focusable="false"
                    android:textColor="@android:color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:visibility="invisible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    style="@style/field"
                    android:hint="@string/email_signup"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_of_birth_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:visibility="invisible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDOB"
                    style="@style/field"
                    android:hint="@string/dob"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/tajawal_bold"
                android:padding="@dimen/default_margin"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>