<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/tool"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgBackForgot"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_28sdp"
                android:src="@mipmap/ic_back"/>
            <TextView
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/default_size"
                android:fontFamily="@font/tajawal_bold"
                android:text="@string/forgot_password"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_28sdp"
                android:visibility="invisible"
                android:src="@mipmap/ic_back"/>

        </LinearLayout>
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_64sdp"
            android:fontFamily="@font/tajawal_regular"
            android:gravity="center"
            android:text="@string/please_enter_your_register_phone_number_below_we_will_send_a_code_to_reset_your_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_75sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layoutDirection="ltr"
                    android:id="@+id/txtCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="@font/tajawal_regular"
                    android:gravity="center_horizontal"
                    android:hint="@string/code"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey"
                    android:textSize="@dimen/_14sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@color/colorPrimary"/>
            </LinearLayout>

            <ImageView
                android:layout_margin="4dp"
                android:id="@+id/countryIcon"
                android:layout_width="30dp"
                android:layout_height="wrap_content">

            </ImageView>

            <EditText
                android:layout_weight="1"
                android:theme="@style/HomePageTheme"
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7sdp"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/tajawal_regular"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:layout_marginBottom="@dimen/_1sdp"
                android:maxLength="10"
                android:textCursorDrawable="@null"
                android:cursorVisible="true"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_shadow_start_color"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="@dimen/_148sdp"
            android:layout_height="@dimen/_44sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_35sdp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/tajawal_bold"
            android:text="@string/send"
            android:layout_marginVertical="@dimen/_80sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

</LinearLayout>